objects/LLC_BI__Matrix__c.object
<CustomObject>
    <description>Stores the matrices contained in the Strategy object.</description>
    <fields>
        <fullName>LLC_BI__Description__c</fullName>
        <description>Users populate this field with a description of the matrix</description>
        <inlineHelpText>Enter a description of this matrix</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Single_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users select this optional boolean field to bypass the matrix builder and set one value that applies to all matrix dimensions. By default, it is false.</description>
        <inlineHelpText>Select this field to bypass the matrix builder and set one value that applies to all matrix dimensions.</inlineHelpText>
        <label>Set a Single Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Matrix_Type__c</fullName>
        <description>Users populate this required field to specify the matrix type. By default, it is blank.</description>
        <label>Matrix Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Base Rate Matrix</fullName>
                </value>
                <value>
                    <fullName>Rate Adjustment</fullName>
                </value>
                <value>
                    <fullName>Income Policy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Strategy__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this field with the associated strategy when a user creates a matrix.</description>
        <label>Strategy</label>
        <referenceTo>LLC_BI__Strategy__c</referenceTo>
        <relationshipLabel>Matrices</relationshipLabel>
        <relationshipName>Matrices</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Matrix</label>
    <nameField>
        <label>Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Matrices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>